--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <properties>
+    <!--<properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+    </properties>-->
 
     <dependencies>
         <dependency>
